# fizzbuzz-scotty

./: LICENSE  fizzbuzz-scotty.cabal  stack.yaml
src/: FizzBuzz.hs  FizzTypes.hs  FizzUtils.hs  Interface.hs
test/: Spec.hs
